[package]
name = "manylines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
walkdir = "2.3.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
